@startuml
title Диаграмма классов «Логирование и индекс трассировок»

left to right direction
skinparam shadowing false
skinparam classAttributeIconSize 0

package "com.example.gqw.analytics.logging" {
  class AnalyticsMethodLoggingAspect {
    -analyticsTrackingApi : AnalyticsTrackingApi
    -instrumentationPolicy : AnalyticsInstrumentationPolicy
    -loggingPolicy : AnalyticsLoggingPolicy
    -operationDescriptionResolvers : List<AnalyticsOperationDescriptionResolver>
    -basePackage : String
    -controllerEnabled : boolean
    -serviceEnabled : boolean
    -repositoryEnabled : boolean
    +logMethodExecution(joinPoint) : Object
    -markStageLogWindow(...) : void
    -resolveOperationDescription(...) : String
    -resolveLayer(typeName) : String
  }

  class AppModuleMdcFilter {
    -defaultModuleCode : String
    #doFilterInternal(request, response, chain) : void
    -resolveModuleCode(request) : String
    -resolveModuleFromPath(path) : String
  }

  interface AnalyticsOperationDescriptionResolver {
    +resolve(className, methodName, layer) : String
  }

  class DefaultAnalyticsOperationDescriptionResolver {
    +resolve(className, methodName, layer) : String
    -genericOperationDescription(methodName, layer) : String
  }
}

package "com.example.gqw.analytics.support" {
  class AnalyticsTraceContext {
    +TRACE_ID_HEADER : String
    +TRACE_ID_REQUEST_ATTRIBUTE : String
    +REQUEST_STARTED_AT_ATTRIBUTE : String
    +REQUEST_DURATION_MS_ATTRIBUTE : String
    +TRACE_ID_MDC_KEY : String
  }
}

package "com.example.gqw.analytics.service" {
  class AnalyticsLogArchiveIndexService {
    -jdbcTemplate : NamedParameterJdbcTemplate
    -runtimeSettingsService : AnalyticsRuntimeSettingsService
    -clock : Clock
    +scheduledIndexTick() : void
    +scheduledRetentionTick() : void
    +indexAvailableFilesNow() : LogIndexRunResult
    +findIndexedTrace(...) : IndexedTraceLookup
    +loadTraceLinesFromArchive(...) : List<EventLogEntryDto>
    +diagnostics() : LogIndexDiagnostics
    +cleanupOldLogsNow() : LogRetentionCleanupResult
  }

  class AnalyticsLogViewService {
    -eventRepository : AnalyticsEventRepository
    -logArchiveIndexService : AnalyticsLogArchiveIndexService
    -runtimeSettingsService : AnalyticsRuntimeSettingsService
    +loadTraceLogs(event) : TraceLogLookupResult
    -loadFromCurrentLogs(...) : List<EventLogEntryDto>
    -mergeLogs(...) : List<EventLogEntryDto>
  }

  class AnalyticsTraceLogLookupService {
    -analyticsLogViewService : AnalyticsLogViewService
    +loadTraceLogsSafely(event) : TraceLogLookupResult
  }

  class AnalyticsLoggingPolicy {
    -runtimeSettingsService : AnalyticsRuntimeSettingsService
    +isBuiltInEnabled() : boolean
    +isInfoEnabled() : boolean
    +isWarnEnabled() : boolean
    +isErrorEnabled() : boolean
    +isControllerEnabled() : boolean
    +isUserLogCaptureEnabled() : boolean
    +isStrictWarningsEnabled() : boolean
    +isLayerEnabled(layer) : boolean
  }
}

database "analytics.log_file_index" as file_index
database "analytics.log_trace_index" as trace_index
database "analytics.log_problem_excerpt" as excerpt
folder ".log / .log.gz" as files

DefaultAnalyticsOperationDescriptionResolver ..|> AnalyticsOperationDescriptionResolver
AnalyticsMethodLoggingAspect --> AnalyticsOperationDescriptionResolver
AnalyticsMethodLoggingAspect --> AnalyticsTraceContext
AppModuleMdcFilter --> AnalyticsTraceContext
AnalyticsMethodLoggingAspect --> AnalyticsLoggingPolicy
AnalyticsLogArchiveIndexService --> files : reads
AnalyticsLogArchiveIndexService --> file_index : writes
AnalyticsLogArchiveIndexService --> trace_index : writes
AnalyticsLogArchiveIndexService --> excerpt : writes
AnalyticsLogViewService --> files : reads full lines
AnalyticsLogViewService --> trace_index : reads summary
AnalyticsLogViewService --> excerpt : reads excerpts
AnalyticsTraceLogLookupService --> AnalyticsLogViewService : isolated lookup
@enduml
